form login html

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,10 @@
                     <p class="login">Connexion</p>
                     <div class="form">
                         <form action="login_check" method="post" >
-                                                                
+                            <label for="login">Login</label> :   <input type="login" name="login" >      
+                            <label>password</label>    <input type="password" name="password" >     
+                            <input type="submit" name="valider" value="valider">
+
                         </form>
                     </div>
                     <p class="logout">Bonjour, Kevin ! <a href="#">Deconnexion</a>
