--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,16 +13,27 @@
 	{% block body %}
         <div id="header_crossbar">
                 <div id="connection">
-                    <p class="login">Connexion</p>
-                    <div class="form">
-                        <form action="login_check" method="post" >
-                            <label for="login">Login</label> :   <input type="login" name="login" >      
-                            <label>password</label>    <input type="password" name="password" >     
-                            <input type="submit" name="valider" value="valider">
+                    
+                  {% if(session==nul) %}
+                         <p class="login">Connexion</p>
+                         <div class="form">
+                            <form action="loginValidation" method="post" >
+                                <label for="login">Login</label> :   <input type="login" name="login" >      
+                                <label>password</label>    <input type="password" name="password" >     
+                                <input type="submit" name="valider" value="valider">
 
-                        </form>
-                    </div>
-                    <p class="logout">Bonjour, Kevin ! <a href="#">Deconnexion</a>
+                            </form>
+                        </div>
+                    {% else %}
+{#                     <p class="logout">Bonjour, Kevin ! <a href="#">Deconnexion</a>#}
+                         <p >Bonjour, {{ session.username}} ! <a href="/logout">Deconnexion</a>
+                     {% endif%}
+                     
+                     {% if (message !=null ) %}
+                     <div>
+                            {{ message }}
+                     </div>
+                      {% endif %}
                 </div>
                 <div id="lang">
                     <select>
