--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                         </div>
                     {% else %}
 {#                     <p class="logout">Bonjour, Kevin ! <a href="#">Deconnexion</a>#}
-                         <p >Bonjour, {{ session.username}} ! <a href="/logout">Deconnexion</a>
+                         <p >Bonjour, {{ session}} ! <a href="/logout">Deconnexion</a>
                      {% endif%}
                      
                      {% if (message !=null ) %}
