--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
                          <p class="login">Connexion</p>
                          <div class="form">
                             <form action="loginValidation" method="post" >
-                                <label for="login">Login</label> :   <input type="login" name="login" >      
+                                <label for="login">Login</label> :   <input type="text" name="login" >      
                                 <label>password</label>    <input type="password" name="password" >     
                                 <input type="submit" name="valider" value="valider">
 
