--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -92,16 +92,16 @@
                                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi nostrum aut voluptates veniam. Cum neque quam fuga sapiente quidem eum necessitatibus nulla, cupiditate a, repudiandae iusto in dolor eaque commodi nostrum consequuntur dolores velit eligendi dolorem quae. Distinctio quae, cumque aliquid quos consequuntur perspiciatis voluptates, laboriosam velit qui et aut sint esse nemo voluptatibus, dolore veritatis natus facilis commodi sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis tempore, harum consequatur optio laboriosam nihil sint voluptatem ducimus porro quae expedita alias consectetur explicabo cumque maxime facere praesentium! Ad illo quibusdam omnis suscipit qui eos autem est laborum ducimus! Tenetur?
                                             </p>
                                             <form action="/adhesion" method="post">
-                                                <label for='societe'>Dénomination :</label>  <input type='text' name='societe'><br>
-                                                <label for="adress">Adress</label> :   <input type="text" name="adress" >    <br>
+                                                <label for='societe'>Dénomination :</label>  <input type='text' name='societe' required><br>
+                                                <label for="adress">Adress</label> :   <input type="text" name="adress" required >    <br>
                                                  <label for="siren">Siren</label> :   <input type="text" name="siren" >   
-                                                 <label for="siret">Siret</label> :   <input type="text" name="siret" >   <br>
+                                                 <label for="siret">Siret</label> :   <input type="number" name="siret" >   <br>
                                                   <label for="description">Description</label> : <textarea rows="3" cols="50" name="description" > </textarea>  <br>
                                                   <label for="forme">Forme juridique</label> :   <input type="text" name="forme" > <br>  
-                                                   <label for="contact">Contact principal</label> :   <input type="text" name="contact" >   <br>
-                                                    <label for="fonction">Fonction</label> :   <input type="text" name="fonction" >  <br> 
-                                                    <label for="email">Email</label> :   <input type="text" name="email" >   
-                                                     <label for="Tel">Tel</label> :   <input type="text" name="tel" >   <br>
+                                                   <label for="contact">Contact principal</label> :   <input type="text" name="contact" required >   <br>
+                                                    <label for="fonction">Fonction</label> :   <input type="text" name="fonction" required>  <br> 
+                                                    <label for="email">Email</label> :   <input type="email" name="email"  required>   
+                                                     <label for="Tel">Tel</label> :   <input type="tel" name="tel" required>   <br>
                                                       <input type="submit" name="valider" value="valider">
                                             </form>
 
@@ -111,13 +111,13 @@
 	</section>
     <section>
         <article>
-            <button name="contact" value="être recontacté(e)">
+            <button type="button" name="contact">être recontacté(e)</button>
                 <form method='post' action='/contact'>
-                             <label for='societe'>Dénomination :</label>  <input type='text' name='societe'><br>
-                               <label for="contact">Contact principal</label> :   <input type="text" name="contact" >   <br>
-                                                    <label for="fonction">Fonction</label> :   <input type="text" name="fonction" >  <br> 
-                                                    <label for="email">Email</label> :   <input type="text" name="email" >   
-                                                     <label for="Tel">Tel</label> :   <input type="text" name="tel" >   <br>
+                             <label for='societe'>Dénomination :</label>  <input type='text' name='societe' required><br>
+                               <label for="contact">Contact principal</label> :   <input type="text" name="contact" required>   <br>
+                                                    <label for="fonction">Fonction</label> :   <input type="text" name="fonction" required>  <br> 
+                                                    <label for="email">Email</label> :   <input type="email" name="email" required >   
+                                                     <label for="Tel">Tel</label> :   <input type="tel" name="tel" required >   <br>
                                                       <input type="submit" name="valider" value="valider">
                
                 </form>
