--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -101,13 +101,14 @@
                                             <form action="/adhesion" method="post">
                                                 <label for='societe'>Dénomination :</label>  <input type='text' name='societe' required><br>
                                                 <label for="adress">Adress</label> :   <input type="text" name="adress" required >    <br>
+                                                <label for="pays">pays</label> :   <input type="text" name="pays" required >    <br>
                                                  <label for="siren">Siren</label> :   <input type="text" name="siren" >   
                                                  <label for="siret">Siret</label> :   <input type="number" name="siret" >   <br>
                                                   <label for="description">Description</label> : <textarea rows="3" cols="50" name="description" > </textarea>  <br>
                                                   <label for="forme">Forme juridique</label> :   <input type="text" name="forme" > <br>  
                                                    <label for="contact">Contact principal</label> :   <input type="text" name="contact" required >   <br>
                                                     <label for="fonction">Fonction</label> :   <input type="text" name="fonction" required>  <br> 
-                                                    <label for="email">Email</label> :   <input type="email" name="email"  required>   
+                                                    <label for="email">Email</label> :   <input type="email" name="email"  required><br>   
                                                      <label for="Tel">Tel</label> :   <input type="tel" name="tel" required>   <br>
                                                       <input type="submit" name="valider" value="valider">
                                             </form>
@@ -139,6 +140,7 @@
                     </div>
               {% endif %}
         
+              <a href="/devis">Demande de devis</a>
     </section>
     
 {% endblock %}
