--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}MyFrenchHub!{% endblock %}</title>
-	{% block stylesheets %}
-                   <link rel="stylesheet" type="text/css" href="css/style.css " />
-                      
-	{% endblock %}
-		<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-</head>
-	<body>
-	{% block body %}
-        <div id="header_crossbar">
-            <a href="#member" class="member">Abonnez-vous</a>
+    <head>
+        <meta charset="UTF-8" />
+        <title>{% block title %}MyFrenchHub !{% endblock %}</title>
+        {% block stylesheets %}
+            <link rel="stylesheet" type="text/css" href="css/style.css " />               
+    	{% endblock %}
+        <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+    </head>
+    <body>
+    	{% block body %}
+            <div id="header_crossbar">
+                <!-- <a href="#member" class="member">Abonnez-vous</a> -->
                 <div id="connection">
-                    
-                  {% if(session==nul) %}
-                         <p class="login">Connexion</p>
-                         <div class="form">
+                    {% if(session==nul) %}
+                        <p class="login">Connexion</p>
+                        <div class="form">
                             <form action="loginValidation" method="post" >
-                                <label for="login">Login</label> :   <input type="text" name="login" >      
-                                <label>password</label>    <input type="password" name="password" >     
+                                <label for="login">Login</label><input type="text" name="login" >      
+                                <label>password</label><input type="password" name="password" >     
                                 <input type="submit" name="valider" value="valider">
-
                             </form>
                         </div>
                     {% else %}
-{#                     <p class="logout">Bonjour, Kevin ! <a href="#">Deconnexion</a>#}
-                         <p >Bonjour, {{ session}} ! <a href="/logout">Deconnexion</a>
-                     {% endif%}
-                     
-                     {% if (message !=null ) %}
-                     <div>
+                        <p >Bonjour, {{ session}} ! <a href="/logout">Deconnexion</a></p>
+                    {% endif%}
+
+                    {% if (message !=null ) %}
+                        <div>
                             {{ message }}
-                     </div>
-                      {% endif %}
+                        </div>
+                    {% endif %}
+                </div>
+                <div id="search">
+                    <form action="search.php" method="Post">
+                        <input type="text" name="search" size="10">
+                        <input type="submit" value="Ok">
+                    </form>
                 </div>
                 <div id="lang">
                     <select>
@@ -43,20 +45,19 @@
                     </select>
                 </div>
             </div>
-            
-                    <a href="#header_crossbar" id="scrollup">Scroll</a>
+                
+            <a href="#header_crossbar" id="scrollup">Scroll</a>
 
-                    {% block page %}
-                    {% endblock%}
+            {% block page %}
+            {% endblock%}
 
-                    <footer>
-                    <h1>Footer</h1>
-                    </footer>
+            <footer>
+                <h1>Footer</h1>
+            </footer>
 
-                    {% block javascripts %}
-                    <script type="text/javascript" src="js/frenchHub.js"></script>
-                    {% endblock %}
+            {% block javascripts %}
+                <script type="text/javascript" src="js/frenchHub.js"></script>
+            {% endblock %}
         {% endblock %}
-	</body>
-
+    </body>
 </html>
