--- a/templates/entreprise.html.twig
+++ b/templates/entreprise.html.twig
@@ -4,50 +4,46 @@
             {{parent()}}|  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css " /> 
         {% endblock %}
 {% block page %}
-    <h2>espace Entreprise</h2>
+    
+    {% for item in donnee %}
+        <h2>espace  {{item.name|upper}} </h2>
     
     <div class="col-md-1"></div>
         <div class="col-md-4">
             
           <div class="form-group">
-                      <label for='societe'>Dénomination :</label>  <input type='text' name='societe' class="form-control" required>
+                      <label for='societe'>Dénomination :</label>  <input type='text' name='societe'  value="{{item.name}}"  class="form-control" required>
             </div>
                     <div class="form-group">
-                        <label for="adress">Adresse</label> :   <input type="text" name="adress" class="form-control" required >   
+                        <label for="adress">Adresse</label> :   <input type="text" name="adress" value="{{item.adress}}" class="form-control" required >   
                     </div>
                     <div class="form-group">
-                        <label for="pays"class="col-xs-2 control-label">Pays :</label> 
-                        <div class="col-xs-10 selectContainer">
-                           <select name="select" class="form-control">
-                                        {% for pays in nomPays %}
-                                                         <option value="value1">{{pays.nom_fr_fr}}</option> 
-                                        {% endfor%}
-                           </select> 
-                        </div>
+                        <label for="ville">Ville:</label>  <input type="text"  name="ville" value="{{item.Ville}}"  class="form-control">
                     </div>
-                           
-                              
-       
+                    <div class="form-group">
+                        <label for="pays">Pays :</label>  <input type="text"  name="pays" value="{{item.Pays}}"  class="form-control">
+                    </div>
+                                          
                           <div class="form-group">
-                          <label for="siren">Siren</label> :   <input type="text" name="siren" class="form-control" >   
+                               <label for="siren">Siren</label> :   <input type="text" name="siren" value="{{item.siren}}" class="form-control" >   
                           </div>
                               <div class="form-group">
-                             <label for="siret">Siret</label> :   <input type="number" name="siret"class="form-control"  > 
+                                  <label for="siret">Siret</label> :   <input type="number" name="siret"  value="{{item.siret}}" class="form-control"  > 
                               </div>
                           <div class="form-group">
-                             <label for="description">Activité</label> : <input type="text"  name="description" class="form-control" > 
+                             <label for="description">Activité</label> : <input type="text"  name="description"  value="{{item.description}}"class="form-control" > 
                           </div>
                          <div class="form-group">
-                              <label for="contact">Contact principal</label> :   <input type="text" name="contact"   class="form-control" required >   
+                              <label for="contact">Contact principal</label> :   <input type="text" name="contact"  value="{{item.contact}}" class="form-control" required >   
                         </div>
                         <div class="form-group">
-                               <label for="fonction">Fonction</label> :   <input type="text" name="fonction"   class="form-control" required> 
+                               <label for="fonction">Fonction</label> :   <input type="text" name="fonction"  value="{{item.fonction}}" class="form-control" required> 
                         </div>
                        <div class="form-group">
-                             <label for="email">Email</label> :   <input type="email" name="email"   class="form-control" required>
+                             <label for="email">Email</label> :   <input type="email" name="email"  value="{{item.emailContact}}" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="Tel">Tel</label> :   <input type="tel" name="tel"   class="form-control"required>   
+                            <label for="Tel">Tel</label> :   <input type="tel" name="tel"   value="{{item.tel}}" class="form-control"required>   
                         </div>
                     <label for="pays"class="col-xs-8 control-label">Nombres de salariés concernées :</label> 
                     <div class="col-xs-4 selectContainer">
@@ -60,7 +56,7 @@
                     
                    </div>
                 </div>     
-                    
+                {% endfor %}         
                 <div class="col-md-1"></div>
                 <div class="col-md-4"> 
                     <h2>Liste des salariés</h2>
