--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,63 +1,122 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}MyFrenchHub !{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" type="text/css" href="css/style.css " />               
-    	{% endblock %}
-        <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}MyFrenchHub!{% endblock %}</title>
+	{% block stylesheets %}
+       <link rel="stylesheet" type="text/css" href="css/style.css " />          
+	{% endblock %}
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.min.js"></script>
+    <![endif]-->
+      
+     <!--[if lte IE 9]>
+     <link rel="stylesheet" href="css/style-ie.css" />
+     <![endif]-->
+	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+</head>
+	<body class="container">
+        {% block container %}
+            <header id="top">
+        {% endblock %}
+            <nav>
+                <ul class="menu">
+                    <li class="item1"><a href="#top">Accueil</a>
+                    </li>
+                    <li class="item2"><a href="#relocation">Relocation</a>
+                        <ul>
+                            <li class="subitem1"><a href="#">&#187; Assistance Départ et Arrivé</a></li>
+                            <li class="subitem2"><a href="#">&#187; Logement</a></li>
+                            <li class="subitem3"><a href="#">&#187; Administration</a></li>
+                            <li class="subitem4"><a href="#">&#187; Immigration</a></li>
+                            <li class="subitem5"><a href="#">&#187; Famille</a></li>
+                        </ul>
+                    </li>
+                    <li class="item3"><a href="#formation">Formations</a>
+                        <ul>
+                            <li class="subitem1"><a href="#">&#187; Formation 1</a></li>
+                            <li class="subitem2"><a href="#">&#187; Formation 2</a></li>
+                            <li class="subitem3"><a href="#">&#187; Formation 3</a></li>
+                        </ul>
+                    </li>
+                    <li class="item4"><a href="#community">Hub</a>
+                        <ul>
+                            <li class="subitem1"><a href="#">&#187; Experts</a></li>
+                            <li class="subitem2"><a href="#">&#187; Communauté</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+            </nav>
+            <a class="menu-btn">&#9776;</a>
+            <a class="menu-btn-active">X</a>
     	{% block body %}
-            <div id="header_crossbar">
-                <!-- <a href="#member" class="member">Abonnez-vous</a> -->
-                <div id="connection">
+            <section id="menu">
+                <div id="header_crossbar">
+                        
                     {% if(session==nul) %}
-                        <p class="login">Connexion</p>
-                        <div class="form">
+                        <a href="#">Connexion<span>▼</span></a>
+                        <div id="login_content">
                             <form action="loginValidation" method="post" >
-                                <label for="login">Login</label><input type="text" name="login" >      
-                                <label>password</label><input type="password" name="password" >     
+                                <label for="login">Login</label><input type="text" name="login" id="login" />      
+                                <label for="pass">password</label><input type="password" name="password" id="pass" />     
                                 <input type="submit" name="valider" value="valider">
-                            </form>
+                            </form> 
                         </div>
                     {% else %}
-                        <p >Bonjour, {{ session}} ! <a href="/logout">Deconnexion</a></p>
+                        <p >Bonjour, {{ session}} ! <a href="/logout">Deconnexion</a>
                     {% endif%}
-
+                     
                     {% if (message !=null ) %}
                         <div>
                             {{ message }}
                         </div>
                     {% endif %}
+
+                    <div id="search">
+                        <form action="search.php" method="Post">
+                            <input type="text" name="search" size="10" />
+                            <input type="submit" value="Ok" />
+                        </form>
+                    </div>
+                    <div id="lang">
+                        <select>
+                            <option value="fr">fr</option>
+                            <option value="en">en</option>
+                        </select>
+                    </div>
                 </div>
-                <div id="search">
-                    <form action="search.php" method="Post">
-                        <input type="text" name="search" size="10">
-                        <input type="submit" value="Ok">
-                    </form>
-                </div>
-                <div id="lang">
-                    <select>
-                        <option value="fr">fr</option>
-                        <option value="en">en</option>
-                    </select>
-                </div>
-            </div>
                 
-            <a href="#header_crossbar" id="scrollup">Scroll</a>
+                <!-- bubble navigation --> 
+                <div class="logo">
+                    <img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub">
+                </div>
+                <a href="#" class="sign_up"><span>Devenez<br /><strong>membre!</strong></span></a>
+                <a href="#relocation" class="relocation">Relocation</a>
+                <a href="#formation" class="formation">Formation</a>
+                <a href="#community" class="community">Communauté</a>
 
-            {% block page %}
-            {% endblock%}
+                <!-- teaser sentence -->
+                <p class="teaser">Solutions<br /><strong>to move</strong><br />to France</p>
 
-            <footer>
-                <h1>Footer</h1>
-            </footer>
+                <a href="#relocation" id="scroll_down">Descendre</a>
+            </section>
+        </header>
 
-            {% block javascripts %}
-                <script type="text/javascript" src="js/frenchHub.js"></script>
-            {% endblock %}
-        {% endblock %}
+		<!-- scroll top -->
+        <a href="#top" id="scroll_up">Scroll</a>
+
+    		{% block page %}
+    		{% endblock%}
+
+    		<footer>
+    		<h1>Footer</h1>
+    		</footer>
+
+    		{% block javascripts %}
+    		  <script type="text/javascript" src="js/frenchHub.js"></script>
+    		{% endblock %}
+    	{% endblock %}
     </body>
+
 </html>
