--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
 </head>
 	<body class="container">
         {% block container %}
-            <header id="top">
+            <header class="content" id="top">
         {% endblock %}
             <nav>
                 <ul class="menu">
@@ -109,7 +109,7 @@
     		{% block page %}
     		{% endblock%}
 
-    		<footer>
+    		<footer class="content">
     		<h1>Footer</h1>
     		</footer>
 
