--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,6 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block page %}
+{% block body %}
+
+    <header class="content" id="top">
+        <section id="menu">        
+            <!-- bubble navigation --> 
+            <div class="logo">
+                <img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub">
+            </div>
+            <a href="#" class="sign_up"><span>Devenez<br /><strong>membre!</strong></span></a>
+            <a href="#relocation" class="relocation">Relocation</a>
+            <a href="#formation" class="formation">Formation</a>
+            <a href="#community" class="community">Communauté</a>
+
+            <!-- teaser sentence -->
+            <p class="teaser">Solutions<br /><strong>to move</strong><br />to France</p>
+
+            <a href="#relocation" id="scroll_down">Descendre</a>
+        </section>
+    </header>
     <section id="relocation" class="content" data-id="active_content">
         <h1>SECTION 1</h1>
         <form action="/adhesion" method="post">
@@ -86,5 +104,6 @@
     
         <a href="/devis">Demande de devis</a>
     </section>
-    
+        
 {% endblock %}
+
