page home, detail relocation/formation et formulaire

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,22 +18,22 @@
 	<body class="container">
         <nav>
             <ul class="menu">
-                <li class="item1"><a href="#top">Accueil</a>
+                <li class="item1"><a href="/accueil">Accueil</a>
                 </li>
-                <li class="item2"><a href="#relocation">Relocation</a>
+                <li class="item2"><a href="/relocation">Relocation</a>
                     <ul>
-                        <li class="subitem1"><a href="#">&#187; Assistance Départ et Arrivé</a></li>
-                        <li class="subitem2"><a href="#">&#187; Logement</a></li>
-                        <li class="subitem3"><a href="#">&#187; Administration</a></li>
-                        <li class="subitem4"><a href="#">&#187; Immigration</a></li>
-                        <li class="subitem5"><a href="#">&#187; Famille</a></li>
+                        <li class="subitem1"><a href="/relocation/assistance">&#187; Assistance Départ et Arrivé</a></li>
+                        <li class="subitem2"><a href="/relocation/logement">&#187; Logement</a></li>
+                        <li class="subitem3"><a href="/relocation/administration">&#187; Administration</a></li>
+                        <li class="subitem4"><a href="/relocation/immigration">&#187; Immigration</a></li>
+                        <li class="subitem5"><a href="/relocation/famille">&#187; Famille</a></li>
                     </ul>
                 </li>
-                <li class="item3"><a href="#formation">Formations</a>
+                <li class="item3"><a href="/formation">Formations</a>
                     <ul>
-                        <li class="subitem1"><a href="#">&#187; Formation 1</a></li>
-                        <li class="subitem2"><a href="#">&#187; Formation 2</a></li>
-                        <li class="subitem3"><a href="#">&#187; Formation 3</a></li>
+                        <li class="subitem1"><a href="/formation/Formation1">&#187; Formation 1</a></li>
+                        <li class="subitem2"><a href="/formation/Formation2">&#187; Formation 2</a></li>
+                        <li class="subitem3"><a href="/formation/Formation3">&#187; Formation 3</a></li>
                     </ul>
                 </li>
                 <li class="item4"><a href="#community">Hub</a>
