--- a/templates/salarier.html.twig
+++ b/templates/salarier.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block page %}
-    <h2>espace membres </h2>
+ {% block body %}
+    <h2>espace Salarier</h2>
     {% endblock %}
